--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 <body>
 <!-- Первая страница (оригинальная) -->
 <div class="photo-container">
-    <img src="\img\1\IMG_3364.JPG" alt="Владислав & Ксения">
+    <img src="./img/1/IMG_3364.JPG" alt="Владислав & Ксения">
     <div class="top-text">BK</div>
     <div class="bottom-text">
         <div >Владислав & Ксения</div>
