--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
         </div>
 
         <div class="image-block">
-            <img src="/img/1/+.jpg" alt="Владислав и Ксения" class="round-image">
+            <img src="./img/1/+.jpg" alt="Владислав и Ксения" class="round-image">
         </div>
     </div>
 </div>
@@ -651,7 +651,7 @@
     </div>
 
     <div class="third-content">
-        <img src="/img/1/c2f4de6574974af20296d5901c17d1cf.jpg" alt="Основное место проведения" class="third-main-image">
+        <img src="./img/1/c2f4de6574974af20296d5901c17d1cf.jpg" alt="Основное место проведения" class="third-main-image">
 
         <div class="third-details">
             <p class="p-1"><strong>Церемония:</strong><br>
@@ -674,7 +674,7 @@
         <!-- 1-й круг -->
         <div class="timeline-item">
             <div class="timeline-circle">
-                <img src="/img/free-icon-map-point-3210042.png" alt="Сбор гостей" class="timeline-image">
+                <img src="./img/free-icon-map-point-3210042.png" alt="Сбор гостей" class="timeline-image">
             </div>
             <div class="timeline-text">
                 13:30<br>Сбор гостей у загса
@@ -684,7 +684,7 @@
         <!-- 2-й круг -->
         <div class="timeline-item">
             <div class="timeline-circle">
-                <img src="/img/free-icon-rings-721914.png" alt="Регистрация брака" class="timeline-image">
+                <img src="./img/free-icon-rings-721914.png" alt="Регистрация брака" class="timeline-image">
             </div>
             <div class="timeline-text">
                 14:00<br>Регистрация брака
@@ -694,7 +694,7 @@
         <!-- 3-й круг -->
         <div class="timeline-item">
             <div class="timeline-circle">
-                <img src="/img/free-icon-photographic-equipment-14687000.png" alt="Фотосессия" class="timeline-image">
+                <img src="./img/free-icon-photographic-equipment-14687000.png" alt="Фотосессия" class="timeline-image">
             </div>
             <div class="timeline-text">
                 14:30<br>Фотосессия
@@ -704,7 +704,7 @@
         <!-- 4-й круг -->
         <div class="timeline-item">
             <div class="timeline-circle">
-                <img src="/img/free-icon-banquet-6698018.png" alt="Банкет" class="timeline-image">
+                <img src="./img/free-icon-banquet-6698018.png" alt="Банкет" class="timeline-image">
             </div>
             <div class="timeline-text">
                 17:00<br>Банкет
@@ -714,7 +714,7 @@
         <!-- 5-й круг -->
         <div class="timeline-item">
             <div class="timeline-circle">
-                <img src="/img/free-icon-fireworks-2963356.png" alt="Завершение" class="timeline-image">
+                <img src="./img/free-icon-fireworks-2963356.png" alt="Завершение" class="timeline-image">
             </div>
             <div class="timeline-text">
                 23:00<br>Завершение банкета
@@ -731,7 +731,7 @@
     </div>
 
     <div class="wishes-content">
-        <img src="/img/1/0fa21e7ea0625504dab2e95a63a34909.jpg" alt="details" class="wishes-image">
+        <img src="./img/1/0fa21e7ea0625504dab2e95a63a34909.jpg" alt="details" class="wishes-image">
 
         <div class="wishes-text">
             <p><b>Дорогие гости!</b></p>
@@ -761,7 +761,7 @@
             <p class="survey-notice"><br>Позже, на этой странице появится ссылка с готовыми фото</p>
         </div>
 
-        <img src="/img/1/IMG_3366.JPG" alt="Анкета" class="survey-image">
+        <img src="./img/1/IMG_3366.JPG" alt="Анкета" class="survey-image">
     </div>
 </div>
 
