--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
         <div class="text-block">
             <div class="invitation-text">
                 Один день в этом году станет для нас особенно важным, и мы хотим провести его в кругу близких и друзей!
-                С большим удовольствием приглашаем Вас
+                <br> С большим удовольствием приглашаем Вас
                 на нашу свадьбу!
             </div>
 
@@ -737,10 +737,10 @@
             <p><b>Дорогие гости!</b></p>
             <p>Хотим заранее прояснить несколько моментов о нашем празднике:</p>
 
-            <p><b>Дресс-кода нет</b> — главное, чтобы Вам было комфортно!</p>
-            <p><b>Фуршет</b> — перед началом банкета для Вас будет организован фуршет! </p>
+            <p><b>Дресс-кода нет</b> — главное, чтобы Вам было комфортно.</p>
+            <p><b>Фуршет</b> — перед началом банкета для Вас будет организован фуршет.</p>
             <p><b>Подарки</b> — если хотите нас порадовать, будем благодарны Вашим пожеланиям в конвертах.</p>
-            <p><b>Традиции</b> — мы обойдёмся без криков «Горько!». Для нас поцелуй — это проявление чувств, а не обязательный ритуал.</p>
+            <p><b>Традиции</b> — мы обойдёмся без криков «Горько!». Лучше подарите нам свои тёплые пожелания, улыбки и яркие аплодисменты.</p>
 
             <p><br>Благодарим за понимание и с нетерпением ждём этого дня вместе с Вами!</p>
         </div>
