--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             width: 100%;
             text-align: center;
             font-family: 'Great Vibes', cursive;
-            color: #D6D6D6;
+            color: #f3e9e9;
             font-size: min(8rem, 15vw);
             margin: 0;
         }
@@ -60,7 +60,7 @@
             left: 0;
             width: 100%;
             text-align: center;
-            color: #D6D6D6;
+            color: #f3e9e9;
             font-size: 40px;
             margin-bottom: 10px;
         }
